--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -158,7 +158,7 @@
   </mat-toolbar>
 
   <mat-sidenav-container fxFlexFill>
-    <mat-sidenav #sidenav opened>
+    <mat-sidenav #sidenav>
       <mat-nav-list>
         <!--<a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>-->
         <a
